tests/macros/unknown/async-unknown.stderr
error: unknown question option `unknown_async`
 --> $DIR/async-unknown.rs:2:51
  |
2 |     let q = inquisition::questions![Input { async unknown: 0 }];
  |                                                   ^^^^^^^
