tests/macros/unknown/async-unknown.rs
fn main() {
    let q = inquisition::questions![Input { async unknown: 0 }];
}
